compiler/tests/fa/errors/pure_global_write_fa.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
متغیر جمع صحیح۳۲ = 0

خالص تابع افزودن(x صحیح۳۲) صحیح۳۲:
    جمع = جمع + x
    بازگشت جمع
پایان

تابع اصلی:
    چاپ(افزودن(2))
پایان
